Correct spacing on links and logo to absolute spacing
Fix spacing to specified pixel amounts. Used padding
for spacing instead of margins so that the link
buttons occupy as much space as possible so that
they are easier to click on.

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -51,14 +51,17 @@ ul {
 header, .left-items, .right-items {
   display: flex;
   align-items: center;
-  margin: 1%;
-  gap: 8px;
+  margin: 8px;
+}
+
+.logo {
+  margin-right: 8px;
 }
 
 .links {
   display: flex;
-  margin-left: 4px;
-  padding: 0;
+  margin-left: 0px;
+  padding: 0px;
 }
 
 .links a {
